# CoLa

./: CMakeLists.txt  README.md  prep_torch_par.py  prep_torch_ppl.py  rabbit_order_write.py
include/: dist_spmm_ppl_batch.cuh  sparse_data.h  utils.cuh
rabbit_module/src/: setup.py
slurm_script/: cola_ppl_batch.slurm  compile.slurm
src/: distSpMM_ppl_batch.cu
